css/homepage.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Hahmlet', serif;
}

.main {
    width: 100%;
    height: 100vh;
    background: linear-gradient(to top, rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url('../assets/images/bgbg.jpg');
    background-position: center;
    background-size: cover;
    color: #f3eff5;
    padding: 0 10%;
}

nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 20px 0;
}

.logo {
    display: flex;
    align-items: center;
    height: 15px;

}

.logo img{
    width: 60px;
}

.logoname{
    font-family: 'Hahmlet', serif;
    font-size: 25px;
    color: #ececec;

}

nav ul {
    display: flex;
    list-style: none;
}

nav ul li {
    margin: 0 20px;
}

nav ul li a {
    text-decoration: none;
    color: #ececec;
    transition: 0.3s;
}

nav ul li a.active, nav ul li a:hover {
    color: #06629b;
}

.btn-login {
    padding: 10px 30px;
    background: #596272;
    color: #ececec;
    border: none;
    border-radius: 10px;
    cursor: pointer;
}

.btn-login:hover {
    transform: scale(1.05);
    transition: 0.5s;
}

.hero-content {
    margin-top: 15%;
    max-width: 900px;
}

.hero-content h1 {
    font-size: 85px;
    margin-bottom: 20px;
    color: #ececec;
}

.hero-content p {
    font-size: 18px;
    line-height: 1.6;
    margin-bottom: 30px;
    color: #ececec;
    padding-left: 5px;
}

.btn-read {
    display: inline-block;
    padding: 15px 35px;
    background: #596272;
    color: #ececec;
    text-decoration: none;
    border-radius: 25px;
    font-size: 18px;
}

.btn-read:hover {
    transform: scale(1.05);
    transition: 0.5s;
}

.copyright{
    position: absolute;
    bottom: 20px;       /* Distance from the bottom of the screen */
    left: 50%;
    transform: translateX(-50%); /* This perfectly centers the text */
    color: rgba(255, 255, 255, 0.5); /* Subtle white (50% transparent) */
    font-size: 14px;
    letter-spacing: 1px;
    text-align: center;
    width: 100%;
    font-family: 'Hahmlet', sans-serif;
}

